[b][color=orange]v4.54[/color], 27.08.2020[/b][list]
[*]Fixed an incompatibility error, which errors out my Plugin[/list]


[b][color=orange]v4.53[/color], 27.08.2020[/b][list]
[*]Added Holographic Digitalization to the LocPanel Hearthstones
[*]Updated the logo for my SplashScreen
[*]Don't hide some textures from the ObjectiveTracker
[*]Changed my AFK screen
[*]Added an option to adjust the Style Panel Width
[*]Take account to the ElvUI Healprediction changes
[*]Adjust the frame strata for my right Chat Datatext
[*]Added a new font "Gotham Narrow Ultra"
[*]Some code cleanup and misc changes[/list]


[b][color=orange]v4.52[/color], 16.07.2020[/b][list]
[*]Take account for the new Aura Color Option from ElvUI.
[*]Don't force settings anymore if you enable the rectangle Minimap.
[*]Fix AzeriteTooltip Icons to display correct now.
[*]Code cleanup.[/list]


[b][color=orange]v4.51[/color], 12.07.2020[/b][list]
[*]Prevent an error which cause that the Export Profile didnt work.
[*]My chat seperators now take account of the Chat Panel Backdrop Settings.
[*]Simplify my Tooltip Icons.
[*]UNDER INVESTIGATION: Added back Item Level Links. See in game Changelog for infos.[/list]


[b][color=orange]v4.50[/color], 09.07.2020[/b][list]
[*]Try to prevent an error with my ChatButton.
[*]Add an additional check if you enable the rectangle minimap.[/list]


[b][color=orange]v4.49[/color], 08.07.2020[/b][list]
[*]Take account for the latest DataTexts update from ElvUI.
[*]NOTE: If you want my new DataTexts, you need to do the install step for DataTexts.
[*]Added own custom DataTexts via the new ElvUI option.
[*]Fixed Heal-Layout UnitFrames position.
[*]Use a new texture. (Do the install to get it :P)
[*]Some skin updates & small code changes.
[*]Updated the Combat Alert (Enter/Leave Combat message).
[*]WIP: Added rectangle Minimap.[/list]


[b][color=orange]v4.48[/color], 30.04.2020[/b][list]
[*]Take account for the latest DataTexts update from ElvUI.[/list]

