@@ -1,3 +1,10 @@
+** v4.55 for Shadowland Pre-Patch, 13.10.2020**
+* Added an own FlightMode (inspired by Benik's)
+* Updated/Added a lot of skins due to Shadowland code changes.
+* Added an options for my Top-/Bottom Panel to change the height.
+* Maybe a lot of other changes i already forgot.. lol.
+
+
 ** v4.54, 27.08.2020**
 * Fixed an incompatibility error, which errors out my Plugin
 
